--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ img
 }
 .btn-navigation
 {
-    position: absolute;
+    position: fixed;
     height: 50px;
     width: 50px;
     z-index: 200;
@@ -72,12 +72,12 @@ img
  }
 .prev-chapter
 {
-    right: 20px;
+    left: 20px;
     bottom:20px;
 }
 .next-chapter
 {
-    left: 20px;
+    right: 20px;
     bottom:20px;
 }
 .toggle-leftbar > div.image,
