--- a/css/main.css
+++ b/css/main.css
@@ -80,10 +80,17 @@ img
     right: 20px;
     bottom:20px;
 }
-.toggle-leftbar > div.image,
-.prev-chapter > div.image,
-.next-chapter > div.image,
-.download-chapter > div.image
+.prev-page
+{
+    left: 100px;
+    bottom:20px;
+}
+.next-page
+{
+    right: 100px;
+    bottom: 20px;
+}
+.btn-navigation > div.image
 {
     position: relative;
     height: 50px;
