added color on link (chap-list) + edit card header

--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,11 @@ img
 }
 .chap-link-div  > a
 {
-    color: #000;
+    color: #101010;
+}
+.chap-link-div  > a:hover
+{
+    color: #7e2374;
 }
 .reader-content
 {
